01-react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react
  namespace: react-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-project
        image: rywj/jenkins-react:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: react-project
spec:
  selector:
    app: react
  ports:
  - port: 80
    targetPort: 80
