02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  namespace: react-project
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx  
  rules:
  - host: 192.168.89.100  
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-service
            port: 
              number: 80
